--- a/package.json
+++ b/package.json
@@ -2,11 +2,28 @@
   "name": "vite-plugin-auto-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "pnpm run build --watch --ignore-watch examples",
+    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "example:react": "cd examples/vite-react && pnpm run build",
+    "example:vue2": "cd examples/vite-vue2 && pnpm run build",
+    "example:vue3": "cd examples/vite-vue3 && pnpm run build",
+    "prepublishOnly": "pnpm run build",
+    "release": "npx bumpp --push --tag --commit && pnpm publish"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": " <596487930@qq.com>",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "bumpp": "^8.2.1",
+    "picocolors": "^1.0.0",
+    "progress": "^2.0.3",
+    "rd": "^2.0.1",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
+  }
 }
