--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "pack:dev": "webpack --mode=development",
+    "pack:build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "pnpm run build --watch --ignore-watch examples",
     "build": "tsup src/index.ts --dts --format cjs,esm",
@@ -18,12 +20,26 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "babel-loader": "^9.1.0",
     "bumpp": "^8.2.1",
+    "css-loader": "^6.7.2",
     "picocolors": "^1.0.0",
     "progress": "^2.0.3",
     "rd": "^2.0.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14"
+  },
+  "dependencies": {
+    "@babel/core": "^7.20.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "ts-loader": "^9.4.1",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "3.3.12"
   }
 }
