--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "pack:build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "pnpm run build --watch --ignore-watch examples",
-    "build": "tsup src/index.ts --dts --format cjs,esm",
     "example:react": "cd examples/vite-react && pnpm run build",
     "example:vue2": "cd examples/vite-vue2 && pnpm run build",
-    "example:vue3": "cd examples/vite-vue3 && pnpm run build",
     "prepublishOnly": "pnpm run build",
-    "release": "npx bumpp --push --tag --commit && pnpm publish"
+    "release": "npx bumpp --push --tag --commit && pnpm publish",
+    "example:vue3": "cd examples/vite-vue3 && pnpm run build",
+    "build": "tsup src/index.ts --dts --format cjs,esm"
   },
   "keywords": [],
   "author": " <596487930@qq.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@types/node": "^18.11.9",
     "babel-loader": "^9.1.0",
     "bumpp": "^8.2.1",
@@ -29,7 +30,7 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.4",
-    "vue-loader": "^17.0.1",
+    "vue-loader": "17.0.1",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14"
   },
